# esp32p4-smart-display

./: .gitignore  README.md
firmware/: .gitignore  CMakeLists.txt  Containerfile  build.sh  build_c6_slave.sh  compose.yml  config.env.example  flash.sh  flash_host.sh  partitions.csv  sdkconfig.defaults  setup.sh
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/main/config/: config_manager.c  config_manager.h
firmware/main/ha/: ha_client.c  ha_client.h
firmware/main/net/: wifi_manager.c  wifi_manager.h
firmware/main/server/: http_server.c  http_server.h
firmware/main/ui/: screen_manager.c  screen_manager.h  ui_manager.c  ui_manager.h
firmware/main/ui/fonts/: lv_font_montserrat_fi_16.c  lv_font_montserrat_fi_20.c  lv_font_montserrat_fi_24.c  lv_fonts_fi.h
firmware/portal_test/: server.py
